--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -3,6 +3,7 @@
         <h1>Système de Gestion de Crédits</h1>
         <ul class="nav-links">
             <li><a href="/" class="<%= title === 'Nouvelle demande' ? 'active' : '' %>">Nouvelle demande</a></li>
+             <li><a href="/details" class="<%= title === 'Detail du credit' ? 'active' : '' %>">Detail</a></li>
             <li><a href="/liste" class="<%= title === 'Liste des demandes' ? 'active' : '' %>">Liste des demandes</a></li>
             <li><a href="/apropos" class="<%= title === 'À propos' ? 'active' : '' %>">À propos</a></li>
         </ul>
